--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -79,6 +79,7 @@ dialog {
   --spacing-l: 4rem;
   --spacing-xl: 6rem;
   --spacing-xxl: 8rem;
+  --header-height: clamp(80px, 99px, 105px);
   --fg: rgb(235, 219, 178);
   --blue: #83a598;
   --aqua: #689d6a;
@@ -96,10 +97,11 @@ body {
 
 /* Header */
 header {
+  height: var(--header-height);
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--spacing-m);
+  padding: var(--spacing-m) var(--spacing-xxl);
 }
 
 /* Navigation Menu */
@@ -185,9 +187,10 @@ header {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
+  height: calc(100vh - var(--header-height));
   width: 50vw;
   margin: auto;
-  padding-bottom: calc(5rem + 5vw);
+  padding-bottom: clamp(20px, 14vh, 140px);
 }
 
 .greetings {
@@ -266,4 +269,10 @@ header {
   padding: calc(0.2rem + 0.2vw) calc(0.3rem + 0.3vw);
   border-radius: 0.5rem;
   background-color: var(--terminal-background-dark);
+}
+
+.about {
+  background-color: pink;
+  height: 100vh;
+  width: 100vw;
 }
