--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -95,13 +95,21 @@ body {
   flex-direction: column;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* Header */
 header {
-  height: var(--header-height);
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: var(--spacing-m) var(--spacing-xxl);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  background-color: var(--bg);
 }
 
 /* Navigation Menu */
@@ -125,7 +133,7 @@ header {
   color: var(--fg);
   cursor: pointer;
   transition: color ease-in-out 200ms;
-  font-size: 1.1rem;
+  font-size: calc(0.6rem + 0.6vw);
 }
 
 .nav-menu:hover .nav-item {
@@ -187,10 +195,9 @@ header {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  height: calc(100vh - var(--header-height));
+  height: 100vh;
   width: 50vw;
   margin: auto;
-  padding-bottom: clamp(20px, 14vh, 140px);
 }
 
 .greetings {
