--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -104,7 +104,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: var(--spacing-m) var(--spacing-xxl);
+  padding: var(--spacing-s) var(--spacing-xxl);
   position: fixed;
   top: 0;
   right: 0;
@@ -278,8 +278,86 @@ header {
   background-color: var(--terminal-background-dark);
 }
 
-.about {
-  background-color: pink;
+.expertise {
   height: 100vh;
-  width: 100vw;
+  width: 60vw;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 300px 200px;
+  grid-template-areas:
+    "data software"
+    "value value";
+  align-content: center;
+  gap: var(--spacing-xs);
+}
+.skill {
+  border: 2px solid var(--blue);
+  border-radius: 1rem;
+  display: flex;
+  color: black;
+  flex-direction: column;
+  gap: var(--spacing-xs);
+  color: white;
+  padding: var(--spacing-s);
+  justify-content: space-between;
+}
+
+.skill > .title {
+  display: flex;
+  align-items: center;
+  font-size: 1.7rem;
+  font-weight: 700;
+  gap: var(--spacing-s);
+  margin: 0.5rem 1rem;
+}
+
+.title > svg {
+  width: 3rem;
+  height: 3rem;
+}
+
+.details {
+  font-size: 1.1rem;
+}
+
+.grid-skills-icons {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: var(--spacing-xs);
+  justify-items: center;
+}
+
+.grid-skills-icons > svg {
+  height: 2rem;
+}
+
+.data-sciences .grid-skills-icons > svg:nth-child(6) {
+  grid-column: 2;
+}
+
+.data-sciences .grid-skills-icons > svg:nth-child(7) {
+  grid-column: 4;
+}
+
+.software-engineering .grid-skills-icons > svg:nth-child(6) {
+  grid-column: 2;
+}
+.software-engineering .grid-skills-icons > svg:nth-child(7) {
+  grid-column: 3;
+}
+.software-engineering .grid-skills-icons > svg:nth-child(8) {
+  grid-column: 4;
+}
+
+.data-sciences {
+  grid-area: data;
+}
+
+.software-engineering {
+  grid-area: software;
+}
+
+.value-proposition {
+  grid-area: value;
 }
