--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -397,3 +397,40 @@ header {
   font-size: calc(0.5rem + 1vw);
   line-height: 1.7;
 }
+
+.projects {
+  height: 100vh;
+  width: 75vw;
+  margin: auto;
+  display: grid;
+  grid: repeat(2, 300px) / repeat(3, 1fr);
+  gap: var(--spacing-s);
+  align-content: center;
+}
+
+.project {
+  border-radius: 1rem;
+  background-color: #1d2021;
+  cursor: pointer;
+}
+
+.project > img {
+  object-fit: cover;
+  object-position: top center;
+  height: 80%;
+  width: 100%;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
+
+.project-name {
+  color: white;
+  font-size: calc(1rem + 0.5vh);
+  padding: var(--spacing-s);
+}
+
+.project:hover {
+  transition: 0.2s all ease-in-out;
+  transform: scale(105%);
+  border: 2px var(--fg) solid;
+}
