--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -85,6 +85,7 @@ dialog {
   --aqua: #689d6a;
   --red-pastel: #fb4934;
   --bg: #282828;
+  --purple: #d3869b;
   --terminal-background-dark: #1d2021;
 }
 
@@ -301,7 +302,7 @@ header {
   gap: var(--spacing-xs);
   color: white;
   padding: var(--spacing-s);
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 
 .skill > .title {
@@ -327,6 +328,7 @@ header {
   grid-template-columns: repeat(5, 1fr);
   gap: var(--spacing-xs);
   justify-items: center;
+  margin-top: auto;
 }
 
 .grid-skills-icons > svg {
@@ -383,18 +385,18 @@ header {
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: space-between;
   height: 80vh;
 }
 
 .project-description > .title {
-  font-size: calc(3rem + 1.1vw);
+  font-size: calc(3rem + 1.3vw);
   font-weight: 600;
   border-bottom: var(--blue) 2px solid;
 }
 
 .project-description > .details {
-  font-size: calc(0.5rem + 1vw);
+  font-size: calc(0.5rem + 1.1vw);
   line-height: 1.7;
 }
 
@@ -433,4 +435,153 @@ header {
   transition: 0.2s all ease-in-out;
   transform: scale(105%);
   border: 2px var(--fg) solid;
+}
+
+.contact {
+  height: 90vh;
+  width: 100vw;
+  background-color: pink;
+  display: grid;
+  grid: repeat(2, 1fr) / 40% 28% 32%;
+  grid-template-areas:
+    " info testimonial-1 testimonial-2"
+    " info testimonial-1 testimonial-3";
+  color: white;
+}
+
+.info {
+  background-color: #1d2021;
+  grid-area: info;
+  padding: var(--spacing-xl) var(--spacing-l);
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-s);
+  justify-content: flex-start;
+}
+
+.contact-tagline {
+  font-weight: 700;
+  font-size: calc(1.3rem + 0.6vw);
+}
+
+.contact-description {
+  font-size: calc(1rem + 0.2vw);
+  line-height: 1.6;
+  font-weight: 500;
+}
+
+.mail {
+  display: inline-block;
+  align-self: flex-start;
+  padding-top: calc(1rem + 0.5vh);
+  font-size: calc(1.1rem + 0.6vw);
+  cursor: pointer;
+  border-bottom: var(--purple) 1px solid;
+  position: relative;
+  transition: all 0.3s ease;
+  z-index: 1;
+}
+
+.mail::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: var(--purple);
+  transition: width 0.3s ease;
+  z-index: -1;
+  opacity: 0.5;
+}
+
+.mail:hover::after {
+  width: 100%;
+  height: 53%;
+}
+
+.mail:hover {
+  border-bottom-color: transparent;
+}
+
+.socials {
+  display: flex;
+  justify-content: center;
+  margin-top: auto;
+  gap: var(--spacing-l);
+}
+
+.socials > svg {
+  width: 3rem;
+  height: 3rem;
+  cursor: pointer;
+  color: white;
+}
+
+.socials > svg:hover {
+  color: var(--fg);
+}
+
+.testimonial-1 {
+  color: black;
+  background-color: var(--fg);
+  grid-area: testimonial-1;
+  padding: var(--spacing-xl) var(--spacing-l);
+  display: flex;
+  flex-direction: column;
+  gap: var(--spacing-s);
+  font-size: calc(0.5rem + 0.6vw);
+  font-weight: 450;
+  justify-content: flex-start;
+}
+
+.testimonial-author {
+  margin-top: auto;
+}
+
+.author-name {
+  font-weight: 800;
+}
+
+.author-company {
+  font-weight: 500;
+}
+
+.testimonial-1 > svg {
+  height: 2rem;
+  width: 2rem;
+}
+
+.testimonial-2 {
+  padding: var(--spacing-xl) var(--spacing-l);
+  background-color: var(--blue);
+  grid-area: testimonial-2;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: var(--spacing-s);
+  font-size: calc(0.5rem + 0.6vw);
+  font-weight: 450;
+}
+
+.testimonial-2 > svg {
+  height: 2rem;
+  width: 2rem;
+}
+
+.testimonial-3 {
+  padding: var(--spacing-xl) var(--spacing-l);
+  background-color: var(--aqua);
+  grid-area: testimonial-3;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: var(--spacing-s);
+  font-size: calc(0.5rem + 0.6vw);
+  font-weight: 450;
+}
+
+.testimonial-3 > svg {
+  height: 2rem;
+  width: 2rem;
 }
