--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -201,6 +201,13 @@ header {
   margin: auto;
 }
 
+@media (max-width: 500px) {
+  .home {
+    width: 70vw;
+    height: auto;
+  }
+}
+
 .greetings {
   font-family: "JetBrains Mono", monospace;
   display: flex;
@@ -365,6 +372,86 @@ header {
   grid-area: value;
 }
 
+@media (max-width: 1250px) {
+  .expertise {
+    grid-template-rows: 200px 150px;
+  }
+
+  .skill > .title {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    gap: var(--spacing-xs);
+    margin: 0.2rem 0.8rem;
+  }
+
+  .title > svg {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+
+  .details {
+    font-size: 0.9rem;
+  }
+
+  .grid-skills-icons {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: var(--spacing-xxs);
+    justify-items: center;
+    margin-top: auto;
+  }
+
+  .grid-skills-icons > svg {
+    height: 1.1rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .expertise {
+    margin-top: var(--spacing-m);
+    width: 80vw;
+    height: auto;
+    grid-template-columns: 1fr;
+    grid-template-rows: 220px 220px 220px;
+    grid-template-areas:
+      "data"
+      "software"
+      "value";
+  }
+
+  .skill > .title {
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: 600;
+    gap: var(--spacing-xs);
+    margin: 0.2rem 0.8rem;
+  }
+
+  .title > svg {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+
+  .details {
+    font-size: 0.9rem;
+  }
+
+  .grid-skills-icons {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: var(--spacing-xxs);
+    justify-items: center;
+    margin-top: auto;
+  }
+
+  .grid-skills-icons > svg {
+    height: 1.1rem;
+  }
+}
+
 .featured {
   height: 100vh;
   width: 75vw;
@@ -398,6 +485,34 @@ header {
 .project-description > .details {
   font-size: calc(0.5rem + 1.1vw);
   line-height: 1.7;
+}
+
+@media (max-width: 1250px) {
+  .featured {
+    height: auto;
+    flex-direction: column;
+    gap: var(--spacing-s);
+  }
+
+  .project-description > .title {
+    font-size: calc(1rem + 1.3vw);
+  }
+
+  .project-description > .details {
+    font-size: calc(0.6rem + 0.7vw);
+  }
+}
+
+@media (max-width: 500px) {
+  .featured > img {
+    margin-top: var(--spacing-m);
+    width: 80vw;
+    height: 50vh;
+  }
+
+  .project-description {
+    height: auto;
+  }
 }
 
 .projects {
@@ -435,6 +550,25 @@ header {
   transition: 0.2s all ease-in-out;
   transform: scale(105%);
   border: 2px var(--fg) solid;
+}
+
+@media (max-width: 1250px) {
+  .projects {
+    margin-top: var(--spacing-m);
+    height: auto;
+    grid: repeat(2, 200px) / repeat(3, 1fr);
+  }
+
+  .project-name {
+    font-size: calc(0.8rem + 0.5vh);
+    padding: var(--spacing-xs);
+  }
+}
+
+@media (max-width: 500px) {
+  .projects {
+    grid: repeat(6, 200px) / 1fr;
+  }
 }
 
 .contact {
@@ -600,4 +734,32 @@ footer {
 p > a:hover {
   color: black;
   transition: color 0.2s ease;
+}
+
+@media (max-width: 500px) {
+  .contact {
+    margin-top: var(--spacing-m);
+    width: 100vw;
+    grid: repeat(4, auto) / 1fr;
+    grid-template-areas:
+      "testimonial-1"
+      "testimonial-2"
+      "testimonial-3"
+      "info";
+  }
+
+  .testimonial-1,
+  .testimonial-2,
+  .testimonial-3,
+  .info {
+    padding: var(--spacing-m) var(--spacing-s);
+  }
+
+  .socials > svg {
+    height: 2rem;
+  }
+
+  footer {
+    color: white;
+  }
 }
